--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="cabecalho">
+        <img class="logoimg" src="821846.png">
+        <ul class="lista cabecalho">
+            <li class="item cabecalho">mais sobre nosso site</li>
+           
+        </ul>
+    </header class="cabecalho">
     <h1>Gatinhos Gordos</h1>
     <p>   As vezes um gatinho gordo e fofo pode alegrar o seu dia</p>
     <img src="nintchdbpict000349530329.jpg" alt="">
