--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="logoimg" src="821846.png">
-        <ul class="lista cabecalho">
-            <li class="item cabecalho">mais sobre nosso site</li>
-           
+        <img class="logoimg" src="desenho-gato-dormindo-para-colorir.jpg">
+        <ul class="listacabecalho">
+            <li class="itemcabecalho">mais sobre nosso site</li>
+            <li class="itemcabecalho">gatinhos adoráveis</li>
+            <li class="itemcabecalho">apenas para quem realmente gosta de gatinhos</li>
+            <li class="itemcabecalho">muita fofura e amor</li>
+            <li class="itemcabecalho">se inscreva no nosso site</li>
+            
         </ul>
-    </header class="cabecalho">
+    </header>
     <h1>Gatinhos Gordos</h1>
     <p>   As vezes um gatinho gordo e fofo pode alegrar o seu dia</p>
     <img src="nintchdbpict000349530329.jpg" alt="">
